@@ -18,3 +18,4 @@ mailing lists and maintainers about the missing dependencies of packages
 
 - A Web status page for current status
 
+- Twit status updates ;)
